F10-03: implement qualification management
